--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(include)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 
 file(GLOB COMMONS src/commons/*.cpp)
 file(GLOB SOURCES src/gummyd/*.cpp)
@@ -31,5 +31,7 @@ target_link_libraries(${DAEMON_TARGET} PRIVATE Threads::Threads)
 
 file(GLOB CLI_SOURCES src/gummy/*.cpp)
 add_executable(${PROJECT_NAME} ${CLI_SOURCES} ${COMMONS})
+
+install(TARGETS ${DAEMON_TARGET} ${PROJECT_NAME} RUNTIME DESTINATION bin)
 
 install(FILES 90-backlight.rules DESTINATION /usr/lib/udev/rules.d)
