add binary dir arg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(include)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
+if(NOT BINARY_DIR)
+	set(BINARY_DIR "bin")
+endif()
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR})
+
+set(DAEMON_PATH "${CMAKE_INSTALL_PREFIX}/${BINARY_DIR}/${DAEMON_TARGET}")
+add_compile_definitions(DAEMON_PATH="${DAEMON_PATH}")
 
 file(GLOB COMMONS src/commons/*.cpp)
 file(GLOB SOURCES src/gummyd/*.cpp)
@@ -32,6 +39,6 @@ target_link_libraries(${DAEMON_TARGET} PRIVATE Threads::Threads)
 file(GLOB CLI_SOURCES src/gummy/*.cpp)
 add_executable(${PROJECT_NAME} ${CLI_SOURCES} ${COMMONS})
 
-install(TARGETS ${DAEMON_TARGET} ${PROJECT_NAME} RUNTIME DESTINATION bin)
+install(TARGETS ${DAEMON_TARGET} ${PROJECT_NAME} RUNTIME DESTINATION ${BINARY_DIR})
 
 install(FILES 90-backlight.rules DESTINATION /usr/lib/udev/rules.d)
