install to libexec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,11 @@ project(gummy LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(NOT BINARY_DIR)
-	set(BINARY_DIR bin)
-endif()
+include(GNUInstallDirs)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CACHEFILE_DIR}/${BINARY_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CACHEFILE_DIR}/${CMAKE_INSTALL_BINDIR})
 
 add_subdirectory(src/gummyd)
 add_subdirectory(src/gummy)
-
-install(FILES 90-backlight.rules DESTINATION /usr/lib/udev/rules.d)
 
 #include(CPack)
