--- a/src/gummyd/CMakeLists.txt
+++ b/src/gummyd/CMakeLists.txt
@@ -1,11 +1,9 @@
 project(gummyd LANGUAGES CXX)
 
-set(DAEMON_TARGET ${PROJECT_NAME})
-
 file(GLOB COMMON ../common/*.cpp)
 file(GLOB SOURCES *.cpp)
 
-add_executable(${DAEMON_TARGET} ${SOURCES} ${COMMON})
+add_executable(${PROJECT_NAME} ${SOURCES} ${COMMON})
 
 find_package(X11 REQUIRED)
 find_package(Threads REQUIRED)
@@ -13,13 +11,20 @@ find_package(sdbus-c++ REQUIRED)
 find_library(XCB_LIB "xcb" REQUIRED)
 find_library(XCB_RANDR_LIB "xcb-randr" REQUIRED)
 
-target_link_libraries(${DAEMON_TARGET} PRIVATE
+target_link_libraries(
+	${PROJECT_NAME} PRIVATE
 	${X11_LIBRARIES}
 	Threads::Threads
 	SDBusCpp::sdbus-c++
 	${XCB_LIB}
-	${XCB_RANDR_LIB})
+	${XCB_RANDR_LIB}
+)
 
-target_include_directories(${DAEMON_TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
-install(TARGETS ${DAEMON_TARGET} RUNTIME DESTINATION ${BINARY_DIR})
+if(NOT UDEV_DIR)
+	set(UDEV_DIR /usr/lib/udev/rules.d)
+endif()
+
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBEXECDIR}")
+install(FILES ${CMAKE_SOURCE_DIR}/90-backlight.rules DESTINATION "${UDEV_DIR}")
