--- a/src/gummy/CMakeLists.txt
+++ b/src/gummy/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(${PROJECT_NAME} ${SOURCES} ${COMMON})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
-add_compile_definitions(CMAKE_INSTALL_DAEMON_PATH="${CMAKE_INSTALL_FULL_LIBEXECDIR}/gummyd")
+add_compile_definitions(
+	CMAKE_INSTALL_DAEMON_PATH="${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBEXECDIR}/gummyd")
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
