--- a/src/gummy/CMakeLists.txt
+++ b/src/gummy/CMakeLists.txt
@@ -1,10 +1,10 @@
 project(gummy LANGUAGES CXX)
 
 file(GLOB SOURCES *.cpp)
-file(GLOB COMMON ../common/*.cpp)
 add_executable(${PROJECT_NAME} ${SOURCES} ${COMMON})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include/third-party)
 
 add_compile_definitions(
 	CMAKE_INSTALL_DAEMON_PATH="${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBEXECDIR}/gummyd")
