cli rewrite wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_compile_options("$<$<CONFIG:RELEASE>:-W;-Wall;-O3;-pedantic>")
-add_compile_options("$<$<CONFIG:DEBUG>:-W;-Wall;-Og;-g;-foptimize-sibling-calls;-pedantic>")
+#add_compile_options("$<$<CONFIG:DEBUG>:-W;-Wall;-Og;-g;-foptimize-sibling-calls;-pedantic>")
+add_compile_options("$<$<CONFIG:DEBUG>:-W;-Wall;-pedantic>")
 
 include(GNUInstallDirs)
 
