--- a/src/gummyd/CMakeLists.txt
+++ b/src/gummyd/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 #find_package(X11 REQUIRED)
-find_package(Threads REQUIRED)
+#find_package(Threads REQUIRED)
 find_package(sdbus-c++ REQUIRED)
 find_library(XCB_LIB "xcb" REQUIRED)
 find_library(XCB_IMAGE_LIB "xcb-image" REQUIRED)
@@ -23,13 +23,14 @@ find_library(UDEV_LIB "udev" REQUIRED)
 target_link_libraries(
 	${PROJECT_NAME} PRIVATE
 	#${X11_LIBRARIES}
-	Threads::Threads
+	#Threads::Threads
 	SDBusCpp::sdbus-c++
 	${XCB_LIB}
 	${XCB_RANDR_LIB}
 	${XCB_SHM_LIB}
 	${XCB_IMAGE_LIB}
 	${UDEV_LIB}
+	atomic
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
