--- a/src/gummy/CMakeLists.txt
+++ b/src/gummy/CMakeLists.txt
@@ -1,10 +1,24 @@
 project(gummy LANGUAGES CXX)
 
-set(SOURCES gummy.cpp ../gummyd/config.cpp)
-add_executable(${PROJECT_NAME} ${SOURCES})
+set(HEADERS
+	${INCLUDE_DIR}/config.hpp
+	${INCLUDE_DIR}/file.hpp
+	${INCLUDE_DIR}/utils.hpp
+)
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include/third-party)
+set(SOURCES
+	gummy.cpp
+	../gummyd/config.cpp
+)
+
+add_library(CLI11 INTERFACE)
+target_include_directories(CLI11 INTERFACE ${INCLUDE_DIR}/thirdparty/CLI)
+
+add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+
+target_link_libraries(${PROJECT_NAME} PRIVATE json CLI11)
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
 
 add_compile_definitions(
 	CMAKE_INSTALL_DAEMON_PATH="${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBEXECDIR}/gummyd")
