change folder structure

--- a/gummy/gummy-cli/gummy-cli/CMakeLists.txt
+++ b/gummy/gummy-cli/gummy-cli/CMakeLists.txt
@@ -1,16 +1,12 @@
-project(gummy LANGUAGES CXX)
-
-set(HEADERS
-	${INCLUDE_DIR}/config.hpp
-	${INCLUDE_DIR}/file.hpp
-	${INCLUDE_DIR}/utils.hpp
-)
+project(gummy-cli LANGUAGES CXX)
 
 set(SOURCES
-	gummy.cpp
+	${CMAKE_SOURCE_DIR}/gummy/gummyd/gummyd/config.hpp
+	${CMAKE_SOURCE_DIR}/gummy/gummyd/gummyd/config.cpp
+	gummy-cli.cpp
 )
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 FetchContent_Declare(cli11
 	GIT_REPOSITORY https://github.com/CLIUtils/CLI11
@@ -21,10 +17,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 	nlohmann_json::nlohmann_json
 	CLI11::CLI11
 	fmt::fmt
-	config)
+)
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
-
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/gummy/")
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/gummy/gummyd")
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
 
@@ -33,5 +29,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
 	CMAKE_INSTALL_DAEMON_PATH="${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBEXECDIR}/gummyd"
 	$<$<CONFIG:Debug>:CMAKE_DEBUG>
 )
+
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME gummy)
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
