--- a/gummy/gummy-cli/CMakeLists.txt
+++ b/gummy/gummy-cli/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     nlohmann_json::nlohmann_json
     CLI11::CLI11
     fmt::fmt
+    spdlog::spdlog
     libgummyd
 )
 
