update version number to 0.4.1

--- a/gummy/gummyd/gummyd/CMakeLists.txt
+++ b/gummy/gummyd/gummyd/CMakeLists.txt
@@ -58,7 +58,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/gummy/gu
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
 target_compile_definitions(${PROJECT_NAME} PRIVATE
-	VERSION="${MAIN_VERSION}"
+    VERSION="${GUMMY_VERSION}"
     $<$<CONFIG:Debug>:SPDLOG_ACTIVE_LEVEL=0>
 )
 
