fix find_library name for ddcutil

--- a/gummy/gummyd/gummyd/CMakeLists.txt
+++ b/gummy/gummyd/gummyd/CMakeLists.txt
@@ -36,7 +36,7 @@ target_sources(${PROJECT_NAME}
 )
 
 find_package(sdbus-c++ REQUIRED)
-find_library(LIBDDCUTIL "libddca" REQUIRED)
+find_library(LIBDDCUTIL "ddcutil" REQUIRED)
 
 # udev
 find_library(LIBSYSTEMD "systemd" REQUIRED)
